2004-10-11  Matthias Clasen  <matthias@localhost.localdomain>

	* docs/tools/widgets.c: Create scrolledwindow, statusbar, 
	scale and image images. 

2004-10-10  Matthias Clasen  <matthias@localhost.localdomain>

	* docs/tools/widgets.c: Create a toolbar, menubar, progressbar,
	notebook and messagedialog images.

	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_select_all): 
	Avoid a warning.

Sun Oct 10 11:24:56 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkcontainer.h (struct _GtkContainer): add /*< private >*/
	markings.

2004-10-09  Matthias Clasen  <mclasen@redhat.com>

	* docs/tools/widgets.c: Shrink panes and separators images to MEDIUM.

	* gtk/gtkcellview.c: Add docs.

	* gtk/gtkmenutoolbutton.c (gtk_menu_tool_button_get_menu): Fix
	doc comment.

	* gtk/gtkactiongroup.h: 
	* gtk/gtkactiongroup.c: Reinstate the accidentally lost addition 
	of gtk_action_group_translate_string().

	* gtk/gtkaccelgroup.h: Declare gtk_accelerator_get_label.

2004-10-08  Matthias Clasen  <mclasen@redhat.com>

	* gdk/x11/gdkx.h: Declare gdk_x11_window_set_user_time here.

	* gtk/gtktreeview.c (gtk_tree_view_grab_notify): Don't start a 
	drag if we loose the grab.

	* gtk/gtkfilechooserdefault.c (renderer_edited_cb): Set the cell 
	renderer to inert mode to avoid bug #154921.  This fixes a crash
	which would otherwise occur if the editing is stopped for the second
	time.  (#154767, Manuel Baena García)

	* gtk/gtkdebug.h: 
	* gtk/gtkwidget.c (gtk_widget_size_allocate): Add a new debug
	flag, geometry, to debug size allocation.

	* gtk/gtktreeview.c (gtk_tree_view_button_press): Set cell data
	unconditionally.  (#152562, Federico Mena Quintero)

2004-10-08  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkuimanager.c (update_node): Also update smart separators 
	if the visibility of a  menuitem with a submenu changes.  (#153791,
	Christian Persch)

2004-10-08  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.h:
	* gtk/gtkentry.c: 